<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddNewParkingFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/top_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/margin_small"
            android:visibility="gone"
            tools:visibility="visible"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_parking"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:gravity="center" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_hourly_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/hourly"
                android:textOff="@string/daily"
                android:textOn="@string/hourly" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:paddingTop="@dimen/margin_small"
                android:paddingBottom="@dimen/margin_small"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/date_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_gravity ="center"
                    android:drawablePadding="16dp"
                    app:drawableStartCompat="@drawable/ic_baseline_date_range_24" />
                <TextView
                    android:id="@+id/time_tv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_gravity ="center"
                    android:drawablePadding="16dp"
                    app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/spinner_background">
                <Spinner
                    android:id="@+id/level_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="@dimen/margin_small"
                    android:dropDownVerticalOffset="35dp"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:entries="@array/level_string_array"/>
            </LinearLayout>

            <Button
                android:id="@+id/search_parking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button_bg"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"
                android:text="@string/search"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/progress_bar_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/progress_bar_layout_back"
            android:elevation="20dp"
            android:padding="@dimen/margin_small"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            tools:visibility="visible">

            <ProgressBar
                android:layout_width="30dp"
                android:layout_height="30dp" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/slots_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:visibility="gone"
            tools:listitem="@layout/show_slots_item_layout"
            android:nestedScrollingEnabled="true"
            tools:visibility="visible"
            android:layout_below="@+id/top_linear_layout"/>
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>